Bug 163285 - A non-breaking table cell taller than two pages does not break at the end of the second page
Summary: A non-breaking table cell taller than two pages does not break at the end of ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-04 07:23 UTC by Mike Kaganski
Modified: 2024-10-08 04:31 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
A tall non-breaking cell, higher than two pages (9.34 KB, application/vnd.oasis.opendocument.text)
2024-10-04 07:23 UTC, Mike Kaganski
Details
Sample file with several page breaks. (47.54 KB, application/vnd.oasis.opendocument.text)
2024-10-04 11:10 UTC, m_a_riosv
Details
Screenshot of view after open sample file. (158.53 KB, image/png)
2024-10-05 09:51 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-10-04 07:23:22 UTC
Created attachment 196883 [details]
A tall non-breaking cell, higher than two pages

In the attachment, the table rows are not allowed to break across pages; the first cell is more than two pages high.

The After bug 163230 is fixed, A1 breaks correctly from page 1 to page 2; but it doesn't break at the end of page 2, to flow the rest to page 3.

It was already this way in 7.0; in 6.4, it didn't break from first to second page.
Comment 1 m_a_riosv 2024-10-04 11:10:39 UTC Comment hidden (off-topic)
Comment 2 Mike Kaganski 2024-10-04 11:58:40 UTC Comment hidden (off-topic)
Comment 3 m_a_riosv 2024-10-04 15:34:49 UTC Comment hidden (off-topic)
Comment 4 Mike Kaganski 2024-10-04 15:39:54 UTC Comment hidden (off-topic)
Comment 5 m_a_riosv 2024-10-05 09:11:47 UTC Comment hidden (off-topic)
Comment 6 Mike Kaganski 2024-10-05 09:13:42 UTC Comment hidden (off-topic)
Comment 7 m_a_riosv 2024-10-05 09:51:40 UTC Comment hidden (off-topic)
Comment 8 Mike Kaganski 2024-10-05 09:57:15 UTC Comment hidden (off-topic)
Comment 9 Mike Kaganski 2024-10-05 10:25:58 UTC
https://gerrit.libreoffice.org/c/core/+/174534
Comment 10 Commit Notification 2024-10-05 12:04:20 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/229964ac9321530991639812050d0065c1d532ec

tdf#163285: consider page body frame height to allow the split

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-10-08 04:31:43 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/4cd89ccd307373cddf9b95ceafde954f6e9d0cbe

tdf#163285: consider page body frame height to allow the split

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.