tdf#163285: consider page body frame height to allow the split

This improves on commit b271cc46851c61ddef20dc869bf339c857f76b18
(tdf#123116 sw layout: allow rows larger than page to split anyway,
2020-03-12).

Change-Id: I9327a18146d795c65528b0f16cefc81721266046
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174534
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>